--- a/src/Esw.UnitTest.Common.Analyzers/Resources.resx
+++ b/src/Esw.UnitTest.Common.Analyzers/Resources.resx
@@ -117,18 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AnalyzerDescription" xml:space="preserve">
-    <value>eShopWorld uses xUnit as the Test framework</value>
-    <comment>An optional longer localizable description of the diagnostic.</comment>
-  </data>
-  <data name="AnalyzerMessageFormat" xml:space="preserve">
-    <value>The test '{0}' is using MSTest instead of xUnit</value>
-    <comment>The format-able message the diagnostic displays.</comment>
-  </data>
-  <data name="AnalyzerTitle" xml:space="preserve">
-    <value>Use xUnit instead of MSTest</value>
-    <comment>The title of the diagnostic.</comment>
-  </data>
   <data name="IsTestDescription" xml:space="preserve">
     <value>Tests need to be marked with Is* (ex: IsUnit) to run in a CI/CD build</value>
     <comment>An optional longer localizable description of the diagnostic.</comment>
@@ -139,6 +127,18 @@
   </data>
   <data name="IsTestTitle" xml:space="preserve">
     <value>If you want your test to run in a CI/CD build you need to mark it with Is* (ex: IsUnit)</value>
+    <comment>The title of the diagnostic.</comment>
+  </data>
+  <data name="TestFrameworkDescription" xml:space="preserve">
+    <value>eShopWorld uses xUnit as the Test framework</value>
+    <comment>An optional longer localizable description of the diagnostic.</comment>
+  </data>
+  <data name="TestFrameworkMessageFormat" xml:space="preserve">
+    <value>The test '{0}' is using MSTest instead of xUnit</value>
+    <comment>The format-able message the diagnostic displays.</comment>
+  </data>
+  <data name="TestFrameworkTitle" xml:space="preserve">
+    <value>Use xUnit instead of MSTest</value>
     <comment>The title of the diagnostic.</comment>
   </data>
 </root>
